Disable bias locks by default.
The detailed motivation for a change can be found here: https://openjdk.java.net/jeps/374
More specifically (why now) this PR is driven by soaks investigation of long-running neo4j instances and their performance over time.
And the fact that according to gc logs we continuously spend time revoking or bulk revoking bias locks.